--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
       width: 100%;
       max-width: 100%;
       border-radius: 0;
-  height: var(--navbar-height);
-  border: 1px solid var(--primary);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
+      height: var(--navbar-height);
+      border: 1px solid var(--primary);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
       padding: 0 30px;
       box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
     }
@@ -162,7 +162,7 @@
       display: none;
       cursor: pointer;
       font-size: 1.3rem;
-      color: white;
+      color: var(--primary);
       transition: transform 0.3s ease;
       z-index: 1001;
       padding: 8px;
@@ -516,25 +516,13 @@
         z-index: 1000;
         box-shadow: -5px 0 30px rgba(0, 229, 255, 0.15);
         border-left: 1px solid var(--space-teal);
-        background: transparent;
-      }
-
-      .nav-links::before {
-        content: "";
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 250px;
-        height: 100vh;
         background: linear-gradient(
-            to right,
-            rgba(42, 16, 81, 0.95) 0%,
-            rgba(26, 35, 126, 0.93) 100%
+          to right,
+          rgba(42, 16, 81, 0.95) 0%,
+          rgba(26, 35, 126, 0.93) 100%
         );
         backdrop-filter: blur(15px);
         -webkit-backdrop-filter: blur(15px);
-        z-index: -1;
-        pointer-events: none;
       }
 
       .navbar.scrolled .nav-links {
@@ -547,10 +535,11 @@
       }
 
       .nav-links a {
+        color: var(--white);
         font-size: 1rem;
         width: 100%;
         padding: 8px 0;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
       }
 
       .nav-links a::after {
