--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
     }
 
     footer {
-      background: var(--dark);
+      background: #545d6d;
       color: var(--white);
       padding: 80px 0 24px;
     }
