--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
-      --primary: #6C63FF;
-      --footer: #545d6d;
+      --primary: #003399 ;
+      --footer: #071735;
       --blue:#514bc0;
-      --secondary: #5E81F4;
+      --secondary: #9eb5ff ;
       --white: #FFFFFF;
       --light-gray: #F8F9FA;
       --dark: #2D3748;
@@ -138,7 +138,7 @@
       left: 0;
       width: 0;
       height: 2px;
-      background: var(--primary);
+      background: var(--secondary);
       transition: width 0.4s ease;
     }
 
@@ -147,7 +147,7 @@
     }
 
     .nav-links a:hover {
-      color: var(--blue);
+      color: var(--secondary);
     }
 
     .hamburger {
@@ -461,7 +461,7 @@
       left: 0;
       width: 40px;
       height: 3px;
-      background: var(--primary);
+      background: var(--secondary);
     }
 
     .footer-about p {
@@ -532,14 +532,14 @@
       right: 24px;
       width: 48px;
       height: 48px;
-      background: var(--primary);
+      background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
       color: var(--white);
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 1.1rem;
-      box-shadow: 0 4px 15px rgba(108, 99, 255, 0.3);
+      box-shadow: 0 4px 15px rgb(108 99 255 / 55%);
       cursor: pointer;
       z-index: 999;
       opacity: 0;
@@ -638,16 +638,15 @@
         backdrop-filter: blur(15px);
         -webkit-backdrop-filter: blur(15px);
         border-top-right-radius: 30px;
-        border-bottom-right-radius: 30px;
       }
 
       .nav-links.active {
         right: 0;
       }
 
-      .navbar.scrolled .nav-links.active {
+    .navbar.scrolled .nav-links.active{
         border-top-right-radius: 0;
-      }
+    }
 
       .nav-links a {
         font-size: 1rem;
