--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
   </button>
 
   <!-- Navigation -->
-  <nav class="navbar" id="navbar">
+<nav class="navbar" id="navbar">
     <div class="logo-container">
       <img src="./assets/logo_images/logoss.png" alt="PKL Skanega Logo" class="logo-img">
+      <img src="./assets/logo_images/logo smk.png" alt="Secondary Logo" class="logo-img logo-secondary">
+      <span class="logo-text">PKL</span>
     </div>
     <button class="hamburger" id="hamburger" aria-label="Menu navigasi">
       <i class="fas fa-bars"></i>
@@ -31,7 +33,7 @@
       <a href="#angkatan">Angkatan</a>
       <a href="#kontak">Kontak</a>
     </div>
-  </nav>
+</nav>
   <div class="mobile-menu-backdrop" id="mobileMenuBackdrop"></div>
 
   <!-- Main Content -->
