--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </div>
       </div>
       <div class="footer-bottom" data-scroll="fade-up">
-        <p>&copy; 2025 Program PKL SMKN 3 Kendal. All rights reserved.</p>
+        <p>&copy; 2025 Succy. All rights reserved.</p>
       </div>
     </div>
   </footer>
